# aero-nova

./: .gitignore  ARCHITECTURE.md  README.md  WORKSPACE_AUDIT.md  blueprint.aero  blueprint_parser.py  build_graph.py  main.py  orchestrator.py  self_host.aero  test_blueprint_parser.py  test_self_heal.py
blueprint_lang/: validator.py
build_artifacts/decomposed/core_orchestrator/: __init__.py  main__build_dsl_targets.py  main__emit_polyglot_target.py  main__ingest_list.py  main__ingest_registry.py  main__load_blueprint_config.py  main__maybe_hardware_probe.py  main__maybe_run_evolution.py  main__maybe_run_polymorphization.py  main__maybe_run_semantic_fluidity.py  main__maybe_submit_hpc_build.py  main__parse_dep_overrides.py  main__print_build_debug.py  main__registry_db_path.py  main__run_ingestion_stage.py  main__run_runtime_stage.py  main_analyze_command.py  (+23 more)
builder_brains/: build_manifest.json  compactor.py  decision_tree.py  experience_replay.json  recovery_parser.py  reflux.py
builder_brains/emitters/: __init__.py
core/analysis/: inference.py
core/bootstrap/: isolation.py
core/parser/: universal.py
core/toolchain/: __init__.py  self_healing.py
native/**/: Cargo.toml
src/: lsp_proxy.py
src/analysis/: semantic_mapper.py
src/blueprint/: loader.py
src/decomposition/: __init__.py  reflux.py  splitter.py
src/overlay/: manager.py
src/registry/: ingest.py
src/scaffold/: decomposition.py  engine.py  repo_generator.py
tests/: test_blueprint.py  test_decomposition.py  test_inference.py  test_reflux.py  test_self_healing.py  test_universal_parser.py
