# Synthesised by Aero Universal. Commit a Cargo.toml to take full control;
# Aero will then use it verbatim and never overwrite it.
[package]
name = "compute_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "experimental-declarative-modules"] }
rayon = "1.10"
serde = "1.0"
